add get-me-out images

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <div class="col-sm-4"> 
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <img src="images/stuck.jpg" class="img-responsive margin" alt="Image">
+      <img src="images/get-me-out.jpg" class="img-responsive margin" alt="Image">
     </div>
     <div class="col-sm-4"> 
       
