--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
 <div class="container-fluid bg-3 text-center">    
-  <h3 class="margin">Where To Find Me?</h3><br>
+  <h3 class="margin">Where To Find ANSWER?</h3><br>
   <div class="row">
     <div class="col-md-3">
     
     </div>
     <div class="col-md-6"> 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <p><h1><font color="darkgray">많은 시간과 돈.목적은 하나.호주 영주권...</font></h1></p>
       <img src="images/stuck.jpg" class="img-responsive margin" style="width:100%" alt="STUCK">
     </div>
     <div class="col-md-3"> 
@@ -28,7 +28,7 @@
     
     </div>
     <div class="col-md-6"> 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <p><h2><font color="darkgray">하지만 호주에서 나가란다</font></h2></p>
       <img src="images/get-me-out.jpg" class="img-responsive margin" alt="Image">
     </div>
     <div class="col-md-3"> 
