--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
   </title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-</head>
+  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/earlyaccess/hanna.css">
+    <style>
+      body {
+        font-family: 'Hanna', serif;
+        font-size: 48px;
+      }
+    </style>
+
+  
+  </head>
 <body>
 <div class="container-fluid bg-3 text-center">    
   <h3 class="margin">Where To Find ANSWER?</h3><br>
@@ -14,7 +23,7 @@
     
     </div>
     <div class="col-md-6"> 
-      <p><h1><font color="darkgray">많은 시간과 돈.목적은 하나.호주 영주권...</font></h1></p>
+      <p><font color="darkgray">많은 시간과 돈.목적은 하나.호주 영주권...</font></p>
       <img src="images/stuck.jpg" class="img-responsive margin" style="width:100%" alt="STUCK">
     </div>
     <div class="col-md-3"> 
@@ -28,7 +37,7 @@
     
     </div>
     <div class="col-md-6"> 
-      <p><h2><font color="darkgray">하지만 호주에서 나가란다</font></h2></p>
+      <p><font color="darkgray">하지만 호주에서 나가란다</font></p>
       <img src="images/get-me-out.jpg" class="img-responsive margin" alt="Image">
     </div>
     <div class="col-md-3"> 
