--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/earlyaccess/hanna.css">
     <style>
       body {
-        font-family: 'Hanna', serif;
-        font-size: 48px;
+        font-family: 'Hanna', arial;
+        font-size: 30px;
       }
     </style>
 
@@ -23,7 +23,7 @@
     
     </div>
     <div class="col-md-6"> 
-      <p><font color="darkgray">많은 시간과 돈.목적은 하나.호주 영주권...</font></p>
+      <p>많은 시간과 돈.목적은 하나.호주 영주권..</p>
       <img src="images/stuck.jpg" class="img-responsive margin" style="width:100%" alt="STUCK">
     </div>
     <div class="col-md-3"> 
@@ -37,7 +37,7 @@
     
     </div>
     <div class="col-md-6"> 
-      <p><font color="darkgray">하지만 호주에서 나가란다</font></p>
+      <p>하지만 호주에서 나가란다</p>
       <img src="images/get-me-out.jpg" class="img-responsive margin" alt="Image">
     </div>
     <div class="col-md-3"> 
