--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   </title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/earlyaccess/hanna.css">
+
     <style>
+      @import url(//fonts.googleapis.com/earlyaccess/nanumpenscript.css);
       body {
-        font-family: 'Hanna', arial;
-        font-size: 30px;
+        font-family: 'Nanum Pen Script', arial;
       }
     </style>
 
