font size change

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       @import url(//fonts.googleapis.com/earlyaccess/nanumpenscript.css);
       body {
         font-family: 'Nanum Pen Script', arial;
+        font-size : 25px;
       }
     </style>
 
