--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <img src="images/get-me-out.jpg" class="img-responsive margin" alt="Image">
     </div>
     <div class="col-md-3"> 
-      <img src="images/arrow.jpg" width="20px" height="20px" class="img-responsive margin" alt="Image">
+      <a href="https://woodpeck12.github.io/ghpagest/second.html"><img src="images/arrow.jpg" width="20px" height="20px" class="img-responsive margin" alt="Image"></a>
     </div>
   </div>
   
