fix broken link

--- a/sub/second.html
+++ b/sub/second.html
@@ -25,7 +25,7 @@
     </div>
     <div class="col-md-6"> 
       <p>많은 시간과 돈.목적은 하나.호주 영주권..</p>
-      <img src="images/stuck.jpg" class="img-responsive margin" style="width:100%" alt="STUCK">
+      <img src="../images/stuck.jpg" class="img-responsive margin" style="width:100%" alt="STUCK">
     </div>
     <div class="col-md-3"> 
       
@@ -39,10 +39,10 @@
     </div>
     <div class="col-md-6"> 
       <p>하지만 호주에서 나가라한다</p>
-      <img src="images/get-me-out.jpg" class="img-responsive margin" alt="Image">
+      <img src="../images/get-me-out.jpg" class="img-responsive margin" alt="Image">
     </div>
     <div class="col-md-3"> 
-      <a href="https://woodpeck12.github.io/ghpagest/second.html"><img src="images/arrow.jpg" width="20px" height="20px" class="img-responsive margin" alt="Image"></a>
+      <a href="https://woodpeck12.github.io/ghpagest/second.html"><img src="../images/arrow.jpg" width="20px" height="20px" class="img-responsive margin" alt="Image"></a>
     </div>
   </div>
   
