--- a/sub/third.html
+++ b/sub/third.html
@@ -24,7 +24,7 @@
     
     </div>
     <div class="col-md-6"> 
-      <p>나의 문제 처럼..해결해줄..누군가/p>
+      <p>나의 문제 처럼..해결해줄..누군가</p>
       <img src="../images/support.jpg" class="img-responsive margin" style="width:100%" alt="STUCK">
     </div>
     <div class="col-md-3"> 
