--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <img src="images/stuck.jpg" class="img-responsive margin" style="width:100%" alt="STUCK">
     </div>
     <div class="col-md-3"> 
-      
+      <a href="https://woodpeck12.github.io/ghpagest/sub/second.html"><img src="images/arrow1.jpg" width="50px" height="50px" class="img-responsive margin" alt="Image"></a>
     </div>
   </div>
   
@@ -42,7 +42,7 @@
       <img src="images/get-me-out.jpg" class="img-responsive margin" alt="Image">
     </div>
     <div class="col-md-3"> 
-      <a href="https://woodpeck12.github.io/ghpagest/sub/second.html"><img src="images/arrow.jpg" width="20px" height="20px" class="img-responsive margin" alt="Image"></a>
+      <a href="https://woodpeck12.github.io/ghpagest/sub/second.html"><img src="images/arrow.jpg" width="50px" height="50px" class="img-responsive margin" alt="Image"></a>
     </div>
   </div>
   
