--- a/sub/fourth.html
+++ b/sub/fourth.html
@@ -41,10 +41,10 @@
     <div class="col-md-6" align="center"> 
       <p>연락주세요 마지막 기회를 놓치지 마세요</p>
        <a href="mailto:example@email.com">
-        <img src="../images/email.jpg" class="img-responsive margin" width="50px" height="50px" alt="call"> : abcd@abcd.com.au
+        <img src="../images/email.jpg" class="img-responsive margin" width="50px" height="50px" alt="call">abcd@abcd.com.au
       </a>
       <a href="tel:500500500">
-      <img src="../images/call.jpg" class="img-responsive margin" width="50px" height="50px" alt="call"> : +61 9999 8888 
+      <img src="../images/call.jpg" class="img-responsive margin" width="50px" height="50px" alt="call"> +61 9999 8888 
       </a>
       <img src="../images/support1.jpg" class="img-responsive margin" alt="Image">
     </div>
