--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     
     </div>
     <div class="col-md-6"> 
-      <p>많은 시간과 돈.목적은 하나.호주 영주권..</p>
+      <p>꽉 막힌 호주 영주권  </p>
       <img src="images/stuck.jpg" class="img-responsive margin" style="width:100%" alt="STUCK">
     </div>
     <div class="col-md-3"> 
@@ -38,7 +38,7 @@
     
     </div>
     <div class="col-md-6"> 
-      <p>하지만 호주에서 나가라한다</p>
+      <p>다른 해결책은 없을까?</p>
       <img src="images/get-me-out.jpg" class="img-responsive margin" alt="Image">
     </div>
     <div class="col-md-3"> 
