--- a/sub/second.html
+++ b/sub/second.html
@@ -24,7 +24,7 @@
     
     </div>
     <div class="col-md-6"> 
-      <p>방법이 없을까?</p>
+      <p>호주만이 답은 아니다  </p>
       <img src="../images/question.jpg" class="img-responsive margin" style="width:100%" alt="STUCK">
     </div>
     <div class="col-md-3"> 
@@ -38,7 +38,7 @@
     
     </div>
     <div class="col-md-6"> 
-      <p>도움이 필요한데!!!</p>
+      <p>가까운 이웃나라 뉴질랜드에서 새로이 시작한다면? </p>
       <img src="../images/help.jpg" class="img-responsive margin" alt="Image">
     </div>
     <div class="col-md-3"> 
