--- a/sub/third.html
+++ b/sub/third.html
@@ -24,7 +24,7 @@
     
     </div>
     <div class="col-md-6"> 
-      <p>나의 문제 처럼..해결해줄..누군가</p>
+      <p>항상 나와함께 해줄 멘토</p>
       <img src="../images/support.jpg" class="img-responsive margin" style="width:100%" alt="STUCK">
     </div>
     <div class="col-md-3"> 
@@ -38,7 +38,7 @@
     
     </div>
     <div class="col-md-6"> 
-      <p>어디다 말하면 될까?</p>
+      <p>시작부터 끝까지 믿고 맞길수 있는 곳  </p>
       <img src="../images/ask.jpg" class="img-responsive margin" alt="Image">
     </div>
     <div class="col-md-3"> 
