--- a/sub/second.html
+++ b/sub/second.html
@@ -39,7 +39,7 @@
     </div>
     <div class="col-md-6"> 
       <p>가까운 이웃나라 뉴질랜드에서 새로이 시작한다면? </p>
-      <img src="../images/help.jpg" class="img-responsive margin" alt="Image">
+      <img src="../images/aircraft.jpg" class="img-responsive margin" alt="Image">
     </div>
     <div class="col-md-3"> 
       <a href="https://woodpeck12.github.io/ghpagest/sub/third.html"><img src="../images/arrow1.jpg" width="50px" height="50px" class="img-responsive margin" alt="Image"></a>
