--- a/eng/index.html
+++ b/eng/index.html
@@ -18,17 +18,17 @@
   </head>
 <body>
 <div class="container-fluid bg-3 text-center">    
-  <h1 class="margin">Where To Find ANSWER? - 영주권 </h1><br>
+  <h1 class="margin">Where To Find ANSWER? </h1><br>
   <div class="row">
     <div class="col-md-3">
     
     </div>
     <div class="col-md-6"> 
-      <p>꽉 막힌 호주 영주권  </p>
-      <img src="images/stuck.jpg" class="img-responsive margin" style="width:100%" alt="STUCK">
+      <p>Clogged Australian permanent Visa </p>
+      <img src="../images/stuck.jpg" class="img-responsive margin" style="width:100%" alt="STUCK">
     </div>
     <div class="col-md-3"> 
-      <a href="https://woodpeck12.github.io/ghpagest/sub/second.html"><img src="images/arrow1.jpg" width="50px" height="50px" class="img-responsive margin" alt="Image"></a>
+      <a href="https://woodpeck12.github.io/ghpagest/eng/secondeng.html"><img src="../images/arrow1.jpg" width="50px" height="50px" class="img-responsive margin" alt="Image"></a>
     </div>
   </div>
   
@@ -38,11 +38,11 @@
     
     </div>
     <div class="col-md-6"> 
-      <p>다른 해결책은 없을까?</p>
-      <img src="images/get-me-out.jpg" class="img-responsive margin" alt="Image">
+      <p>Is there any other solution?</p>
+      <img src="../images/get-me-out.jpg" class="img-responsive margin" alt="Image">
     </div>
     <div class="col-md-3"> 
-      <a href="https://woodpeck12.github.io/ghpagest/sub/second.html"><img src="images/arrow1.jpg" width="50px" height="50px" class="img-responsive margin" alt="Image"></a>
+      <a href="https://woodpeck12.github.io/ghpagest/eng/secondeng.html"><img src="../images/arrow1.jpg" width="50px" height="50px" class="img-responsive margin" alt="Image"></a>
     </div>
   </div>
   
