--- a/eng/thirdeng.html
+++ b/eng/thirdeng.html
@@ -28,7 +28,7 @@
       <img src="../images/support.jpg" class="img-responsive margin" style="width:100%" alt="STUCK">
     </div>
     <div class="col-md-3"> 
- <a href="https://woodpeck12.github.io/ghpagest/eng/fourth.html"><img src="../images/arrow1.jpg" width="50px" height="50px" class="img-responsive margin" alt="Image"></a>     
+ <a href="https://woodpeck12.github.io/ghpagest/eng/fourtheng.html"><img src="../images/arrow1.jpg" width="50px" height="50px" class="img-responsive margin" alt="Image"></a>     
     </div>
   </div>
   
@@ -42,7 +42,7 @@
       <img src="../images/ask.jpg" class="img-responsive margin" alt="Image">
     </div>
     <div class="col-md-3"> 
-      <a href="https://woodpeck12.github.io/ghpagest/eng/fourth.html"><img src="../images/arrow1.jpg" width="50px" height="50px" class="img-responsive margin" alt="Image"></a>
+      <a href="https://woodpeck12.github.io/ghpagest/eng/fourtheng.html"><img src="../images/arrow1.jpg" width="50px" height="50px" class="img-responsive margin" alt="Image"></a>
     </div>
   </div>
   
